--- a/content/data/config.json
+++ b/content/data/config.json
@@ -34,7 +34,8 @@
                 "url": "/contact/",
                 "style": "button"
             }
-        ]
+        ],
+        "title": "Yuls_Rd<"
     },
     "footer": {
         "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=agency&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>",
