config.json: updated accent_color

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Yuliana Rodríguez Portilla",
     "path_prefix": "/",
     "color_scheme": "light",
-    "accent_color": "green",
+    "accent_color": "yellow",
     "base_font": "fraunces",
     "header": {
         "logo": "/images/Logo (2160 x 1080 px) (6).png",
